# feffery-dash-utils

./: MANIFEST.in  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
feffery_dash_utils/component_prop_utils/: __init__.py  to_box_data.py
feffery_dash_utils/i18n_utils/: __init__.py
feffery_dash_utils/id_utils/: __init__.py  auto_dict_id.py  auto_id.py  common.py  utils.py
feffery_dash_utils/style_utils/: style.py
feffery_dash_utils/template_utils/dashboard_components/: __init__.py
feffery_dash_utils/tree_utils/: tree_manager.py
feffery_dash_utils/version_utils/: __init__.py
requirements/: dev.txt  install.txt
scripts/: generate_style.py
tests/component_prop_utils/: test_to_box_data.py
tests/i18n_utils/: test_i18n_app.py  test_i18n_multi_app.py
tests/id_utils/: auto_dict_id_tests.py  auto_id_tests.py  dash_tests.py  test_auto_dict_id.py  test_auto_id.py  test_dash_integration.py
tests/style_utils/: test_style.py
tests/template_utils/: test_dashboard_components.py
tests/tree_utils/: test_tree_manager.py
tests/version_utils/: requirements.txt  test_check_python_and_dependencies_version.py
